update pages